test/files/neg/t10731.scala

class C {
  val eq.a = 1
}
